# ScrollPickerView

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/fhj/mvi_demo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  android_camera.c  ddd.cpp  functions.h  hook.cpp  hook.h  test.c  test.cpp  video_player.cpp  video_player.h
app/src/main/cpp/ffmpeg/libavcodec/: videotoolbox.h
app/src/main/cpp/ffmpeg/libavdevice/: version.h
app/src/main/cpp/ffmpeg/libavfilter/: avfilter.h  version.h
app/src/main/cpp/ffmpeg/libavformat/: avformat.h
app/src/main/java/com/fhj/mvi_demo/: BaseActivity.kt  DouYinActivity.kt  MVIApplication.kt  SecondActivity.java  SucView.kt  TestDialog.kt  VideoControler.kt  ddd.kt  test.java
app/src/main/java/com/fhj/mvi_demo/m/: MainViewModel.kt
app/src/main/java/com/fhj/mvi_demo/state/: MainState.kt  StateData.kt
app/src/main/java/com/fhj/mvi_demo/views/: Barrage.kt  BarrageLayoutManager.kt  PickScrollView.kt  SimpleView.kt  TestView.kt
app/src/main/java/com/fhj/mvi_demo/views/pickscrollviewImpl/: DrawablePicker.kt  StringPickScrollView.kt
app/src/main/res/drawable/: wifi_rssi_0.xml  wifi_rssi_1.xml  wifi_rssi_2.xml  wifi_rssi_3.xml
app/src/main/res/layout/: activity_1.xml  activity_main.xml  douyin_page.xml
app/src/main/res/values/: themes.xml
app/src/main/res/xml/: scene2.xml
app/src/test/java/com/fhj/mvi_demo/: ExampleUnitTest.kt
extview/: build.gradle
extview/src/androidTest/java/com/ext/extview/: ExampleInstrumentedTest.kt
extview/src/main/java/com/ext/extview/: PickScrollView.kt  SimpleView.kt  SuctionEdge.kt  SwitchButton.kt
extview/src/main/java/com/ext/extview/pickscrollviewImpl/: DrawablePicker.kt  StringPickScrollView.kt  ThetaStringPicker.java
extview/src/main/java/com/ext/extview/utils/: ColorUtil.java  Colors.java  SizeUtil.kt
extview/src/main/res/values/: strings.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
